--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,51 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/MALinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView">
+
+    <EditText
+        android:id="@id/input"
+        android:padding="30dp"
+        android:layout_margin="10dp"
+        android:layout_weight="9"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:hint="@string/enter_a_note"
+        android:textSize="16sp"
+        android:inputType="textMultiLine"
+        android:autofillHints="name"
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:text="@string/submit"
+        android:id="@+id/submit"
+        android:layout_weight="1"
+        android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/input"
+        android:textColor="@color/white"
+        android:visibility="visible"
+        />
+
+    </LinearLayout>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/MALinearLayout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:listitem="@layout/item_note"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
