--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
         app:layout_constraintBottom_toTopOf="@+id/input"
         android:textColor="@color/white"
         android:visibility="visible"
+        android:onClick="submitNote"
         />
 
     </LinearLayout>
