--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="5dp"
     android:background="@color/clrLightGrey"
+    android:orientation="horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     
     <TextView
         android:id="@+id/text"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toLeftOf="@id/deleteButton"
         app:layout_constraintLeft_toLeftOf="parent"
         android:padding="12dp"
         android:textSize="18sp"
-        android:text="Rahul"
+        android:text="@string/the_quick_brown_fox_jumps_over_the_lazy_dog"
+        android:maxEms="1"
         android:textColor="@color/black"
+        android:layout_weight="9"
         />
 
     <ImageView
@@ -27,7 +31,7 @@
         app:layout_constraintTop_toTopOf="@id/text"
         app:layout_constraintBottom_toBottomOf="@id/text"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_weight="1"
+        android:contentDescription="@string/delete_button" />
 
-        />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
