--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
+    android:background="@color/beige"
     tools:context=".MainActivity">
 
 
@@ -17,6 +18,8 @@
         android:layout_width="match_parent"
         android:hint="@string/enter_a_note"
         android:textSize="16sp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black_light"
         android:inputType="textMultiLine"
         android:autofillHints="name"
         />
@@ -27,7 +30,7 @@
         android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:background="@drawable/rounded_corner_button_shape"
         app:layout_constraintBottom_toTopOf="@+id/input"
         android:textColor="@color/white"
         android:visibility="visible"
@@ -35,15 +38,10 @@
         />
 
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/MALinearLayout"
-        app:layout_constraintBottom_toBottomOf="parent"
         tools:listitem="@layout/item_note" />
 
 </LinearLayout>
