--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -3,8 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="5dp"
-    android:background="@color/clrLightGrey"
+    android:background="@drawable/rounded_corner_bg"
     android:orientation="horizontal"
+    android:backgroundTint="@color/white"
+    android:layout_marginHorizontal="10dp"
+    android:elevation="5dp"
+
     xmlns:app="http://schemas.android.com/apk/res-auto">
     
     <TextView
